--- a/maths.sty
+++ b/maths.sty
@@ -5,6 +5,7 @@
 %% Packages
 %% ----------------------------------------------------------------------------
 \RequirePackage{amsmath}
+\RequirePackage{amssymb}
 \RequirePackage{bm}
 \RequirePackage{siunitx}
 
